# classy-fastapi

./: pyproject.toml
classy_fastapi/: routable.py  test_routable.py
